--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am a Ph.D. student at University of Pennsylvania, where I am fortunate to be advised by Prof. René Vidal. My research interests broadly lie in theoretical machine learning and the foundations of data science in order to obtain provable guarantees for ML algorithms. A few particular areas of interest are inverse problems and adversarial robustness.</p>
+    <p>I am a Ph.D. student at University of Pennsylvania, where I am fortunate to be advised by Prof. René Vidal. My research interests broadly lie in problems that lie at the intersection of theory and practice in machine learning. Namely, I study problems where one can obtain provable guarantees for ML algorithms as well as demonstrate their efficacy in practice. A few particular areas of interest are adversarial robustness of deep networks, and inverse problems such as denoising corrupted signals by using deep generative models.</p>
 <p>I previously completed my MS in Computer Science at Columbia University, where I was advised by Prof. John Wright, and my BS degree in CS and Math at UT Austin.</p>
 
 
