--- a/publication/thaker-2024-frequency/index.html
+++ b/publication/thaker-2024-frequency/index.html
@@ -655,7 +655,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/pdf/2411.15295" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/abs/2411.15295" target="_blank" rel="noopener">
   PDF
 </a>
 
