--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      <em>In Submission</em>
+      <em>International Conference on Computer Vision (ICCV)</em>
     
   </span>
   
